mmm tasty cursors i say tasty too much i think wont stop tho

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -44,6 +44,7 @@ ul {
 
 summary {
     text-decoration: underline;
+    cursor: pointer
     
 }
 
